--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
         "@angular/http": "4.4.4",
         "@angular/platform-browser": "4.4.4",
         "@angular/platform-browser-dynamic": "4.4.4",
-        "@ionic-native/core": "4.3.2",
+        "@ionic-native/core": "^4.3.2",
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
+        "@ionic-native/vibration": "^4.5.2",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-vibration": "^2.1.6",
         "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.8.0",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -47,7 +49,8 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-vibration": {}
         },
         "platforms": [
             "android"
