--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "@angular/platform-browser": "4.4.4",
         "@angular/platform-browser-dynamic": "4.4.4",
         "@ionic-native/core": "^4.3.2",
+        "@ionic-native/date-picker": "^4.5.2",
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic-native/vibration": "^4.5.2",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -50,7 +52,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-vibration": {}
+            "cordova-plugin-vibration": {},
+            "cordova-plugin-datepicker": {}
         },
         "platforms": [
             "android"
