--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ionic-native/vibration": "^4.5.2",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-ionic-webview": "^1.2.1",
@@ -56,7 +57,8 @@
             "cordova-plugin-datepicker": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
